<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_console_admin"
        android:icon="@drawable/ic_baseline_construction_24"
        android:title="@string/console" />
    <item
        android:id="@+id/navigation_users_admin"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/users" />

    <item
        android:id="@+id/navigation_chat_admin"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_notification_admin"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />

</menu>