<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


<fragment
        android:id="@+id/navigation_home"
        android:name="com.moomen.graduationproject.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notification_user"
        android:name="com.moomen.graduationproject.ui.fragment.user.StoryUserFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_story_user" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.moomen.graduationproject.ui.fragment.user.ChatUserFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat_user" />
    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.moomen.graduationproject.ui.fragment.user.MyActivityUserFragment"
        android:label="@string/my_activity"
        tools:layout="@layout/fragment_my_activity_user" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.moomen.graduationproject.ui.fragment.AccountFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_account" />

</navigation>