<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_company">

    <fragment
        android:id="@+id/navigation_home_company"
        android:name="com.moomen.graduationproject.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_console_company"
        android:name="com.moomen.graduationproject.ui.fragment.company.ConsoleCompanyFragment"
        android:label="@string/console"
        tools:layout="@layout/fragment_console_company" />

    <fragment
        android:id="@+id/navigation_chat_company"
        android:name="com.moomen.graduationproject.ui.fragment.company.ChatCompanyFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat_company" />

    <fragment
        android:id="@+id/navigation_notification_company"
        android:name="com.moomen.graduationproject.ui.fragment.company.NotificationCompanyFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification_company" />

    <fragment
        android:id="@+id/navigation_account_company"
        android:name="com.moomen.graduationproject.ui.fragment.AccountFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_account" />
</navigation>