<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignInActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextText_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_button_2"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_button_2"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/editTextText_email" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/bg_button_1"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextText_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editTextText_email"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/editText_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editText_password"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:paddingEnd="16dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/textView4"
                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_passwordd"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_password" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/google" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/instagram" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="registerButtonOnClick"
                    android:text="@string/register" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>